# budgit

./: .gitignore  CMakeLists.txt  DOC  NOTES  README  account.c  account.h  accountfile.c  accountfile.h  findwork  graphics.c  graphics.h  interface.c  interface.h  main.c  program.c  program.h  tag.c
src/: CMakeLists.txt  account.c  account.h  accountfile.c  accountfile.h  graphics.c  graphics.h  input.h  interface.c  interface.h  main.c  program.c  program.h  settings.h  tag.c  tag.h
